--- a/src/index.css
+++ b/src/index.css
@@ -89,6 +89,12 @@ main{
     padding-right: 2rem
 }
 
+.hidden{
+  display: none;
+}
+.show{
+  display: block;
+}
 
 /* SCROLL-STYLES */
 body::-webkit-scrollbar {
