--- a/src/element/css/Element.css
+++ b/src/element/css/Element.css
@@ -1,3 +1,16 @@
+.back-btn {
+    padding: 0.5em 2rem;
+    background-color: var(--secondary-color);
+    margin-top: 3rem;
+    margin-bottom: -2rem;
+    color: rgb(8, 8, 8);
+font-family: Manrope;
+font-size: 18px;
+font-style: normal;
+font-weight: 500;
+line-height: 25px; /* 166.667% */
+}
+
 .features{
     display: flex;
     /* align-items: center; */
