--- a/src/components/productImage/Productimage.css
+++ b/src/components/productImage/Productimage.css
@@ -9,12 +9,12 @@
     flex-direction: column;
     row-gap: 3.2rem;
 }
-.product-image__left-img1{
+.product-image__left-img1 img{
     width: 445px;
 height: 280px;
 
 }
-.product-image__left-img2{
+.product-image__left-img2 img{
     width: 445px;
 height: 280px;
 }
@@ -25,5 +25,51 @@ height: 280px;
     border-radius: 0.8rem;
 }
 .product-image__right-img1 img{
+    width: 635px;
+height: 592px;
+}
+.product-image__right-img1 img{
     border-radius:0.8rem;
 }
+
+/* ======RESPONSIVE==== */
+ @media (max-width:800px) {
+    .product-images{
+    column-gap: 2rem;
+    }
+    .product-image__left{
+        row-gap: 2rem;
+    }
+    .product-image__left-img1 img{
+        width: 277px;
+        height: 174px;
+        /* display: none; */
+    }
+    .product-image__left-img2 img{
+        width: 277px;
+        height: 174px;
+    }
+    .product-image__right-img1 img{
+        width: 395px ;
+        height: 368px ;
+    }
+ }
+ @media (max-width:500px) {
+    .product-images{
+        flex-direction: column;
+        row-gap: 2rem;
+        margin-top: -4rem;
+    }
+    .product-image__left-img1 img{
+        width: 327px;
+height: 174px;
+    }
+    .product-image__left-img2 img{
+        width: 327px;
+height: 174px;
+    }
+    .product-image__right-img1 img{
+        width: 327px;
+height: 368px;
+    }
+ }
