--- a/src/components/categoryCards/CategoryCards.css
+++ b/src/components/categoryCards/CategoryCards.css
@@ -48,7 +48,7 @@ text-transform: uppercase;
     display: flex;
     align-items: center;
     column-gap: 0.3rem;
-    color: #D87D4A;
+    color: #d1cac7;
 font-family: Manrope;
 font-size: 13px;
 font-style: normal;
@@ -56,4 +56,69 @@ font-weight: 700;
 line-height: normal;
 letter-spacing: 1px;
 text-transform: uppercase;
+}
+.categoty-cards__item__link:hover{
+    color: var(--main-color);
+}
+
+/* =======RESPONSIVE====== */
+
+@media (max-width:800px) {
+    .category-cards__item{
+        width: 223px;
+    height: 165px;
+    }
+    .category-cards__item__title{
+        font-size: 15px;
+    }
+    .categoty-cards__item__link{
+        font-size: 13px;
+    }
+}
+@media (max-width:700px) {
+    .category-cards__item{
+    width: 100%;
+    max-width: 180px;
+    height: 165px;
+    }
+    .category-cards__item__img{
+        top: -50px;
+        width: 79.916px;
+        height: 104px;
+    }
+    
+    .category-cards__item__title{
+        font-size: 15px;
+    }
+    .categoty-cards__item__link{
+        font-size: 13px;
+    }
+}
+@media (max-width:600px) {
+    .category-cards__item{
+    width: 100%;
+    max-width: 150px;
+    height: 165px;
+    }
+    .category-cards__item__img{
+        top: -30px;
+        width: 59.916px;
+        height: 80px;
+    }
+}
+@media (max-width:500px) {
+    .category-cards__list{
+        flex-direction: column;
+        row-gap: 6.8rem;
+    }
+    .category-cards__item{
+        width: 100%;
+        max-width: 327px;
+        height: 165px;
+        }
+        .category-cards__item__img{
+            top: -50px;
+            width: 79.916px;
+height: 104px;
+        }
 }
