--- a/src/pages/headPhones/HeadPhones.css
+++ b/src/pages/headPhones/HeadPhones.css
@@ -17,3 +17,14 @@ line-height: 44px;
 letter-spacing: 1.429px;
 text-transform: uppercase;
 }
+
+/* =======RESPONSIVE====== */
+ @media (max-width:500px) {
+    .intro{
+        padding: 3.2rem 0;
+    }
+    .intro-title{
+        font-size: 2.8rem;
+transform: translate(-30%);
+    }
+ }
